refactor: Remove my-turborepo and update project configuration
- Delete my-turborepo directory and all its contents as it's no longer needed
- Update root .gitignore with standard patterns for dependencies, env files, and testing
- Update package.json, pnpm-lock.yaml, and turbo.json configurations
- Add new root-level config files (.npmrc, .vscode/, README.md, pnpm-workspace.yaml)

This cleanup removes the old turborepo structure and consolidates configuration at the project root level.

--- a/turbo.json
+++ b/turbo.json
@@ -1,27 +1,21 @@
 {
-  "$schema": "https://turbo.build/schema.json",
-  "globalDependencies": ["**/.env.*local"],
-  "remoteCache": {
-    "enabled": true
-  },
+  "$schema": "https://turborepo.com/schema.json",
+  "ui": "tui",
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
-      "outputs": ["dist/**", ".next/**", "!.next/cache/**"]
+      "inputs": ["$TURBO_DEFAULT$", ".env*"],
+      "outputs": [".next/**", "!.next/cache/**"]
+    },
+    "lint": {
+      "dependsOn": ["^lint"]
+    },
+    "check-types": {
+      "dependsOn": ["^check-types"]
     },
     "dev": {
       "cache": false,
       "persistent": true
-    },
-    "clean": {
-      "cache": false
-    },
-    "start": {
-      "dependsOn": ["build"]
-    },
-    "test": {
-      "dependsOn": ["^build"],
-      "outputs": []
     }
   }
 }
