--- a/package.json
+++ b/package.json
@@ -1,31 +1,20 @@
 {
-  "name": "whatschat",
-  "version": "1.0.0",
+  "name": "my-turborepo",
   "private": true,
-  "description": "",
-  "workspaces": [
-    "packages/*",
-    "apps/*"
-  ],
   "scripts": {
-    "dev": "turbo dev",
-    "build": "turbo build",
-    "start": "turbo start",
-    "clean": "turbo clean",
-    "lint": "turbo lint",
-    "format": "turbo format",
-    "test": "turbo test",
-    "typecheck": "turbo typecheck"
+    "build": "turbo run build",
+    "dev": "turbo run dev",
+    "lint": "turbo run lint",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "check-types": "turbo run check-types"
   },
-  "keywords": [],
-  "author": "felix zhu <z1434866867@gmail.com>",
-  "license": "MIT",
   "devDependencies": {
-    "turbo": "^2.4.2"
+    "prettier": "^3.6.0",
+    "turbo": "^2.5.4",
+    "typescript": "5.8.2"
   },
+  "packageManager": "pnpm@9.0.0",
   "engines": {
-    "pnpm": ">=9.15.0",
-    "node": ">=18.0.0"
-  },
-  "packageManager": "pnpm@9.15.0"
+    "node": ">=18"
+  }
 }
