feat: Refactor auth flow and add search to starred messages
- Update app metadata and branding from 'v0' to 'Whats Chat'
- Implement client-side auth checks with loading states
- Add login/register page routes
- Introduce search functionality for starred messages
- Improve UI consistency across components
- Clean up code formatting and imports

--- a/package.json
+++ b/package.json
@@ -1,6 +1,17 @@
 {
-  "name": "my-turborepo",
+  "name": "whats-chat",
   "private": true,
+  "workspaces": [
+    "packages/*",
+    "apps/*"
+  ],
+  "author": "felix zhu <z1434866867@gmail.com>",
+  "license": "MIT",
+  "keywords": [
+    "whats-chat",
+    "whatsapp",
+    "chat"
+  ],
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
