--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -4,7 +4,7 @@
   "description": "WhatsChat服务器应用 - 处理消息路由、用户认证、实时通信和业务逻辑",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "nodemon src/index.ts",
+    "dev": "nodemon --exec ts-node -r tsconfig-paths/register src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "lint": "eslint src/**/*.ts",
@@ -15,7 +15,9 @@
     "migrate:deploy": "prisma migrate deploy",
     "db:generate": "prisma generate",
     "db:studio": "prisma studio",
-    "db:seed": "ts-node src/database/seed.ts"
+    "db:seed": "ts-node -r tsconfig-paths/register src/database/seed.ts",
+    "db:reset": "prisma migrate reset --force",
+    "db:push": "prisma db push"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -48,7 +50,8 @@
     "ioredis": "^5.3.2",
     "node-cron": "^3.0.3",
     "express-ws": "^5.0.2",
-    "ws": "^8.14.2"
+    "ws": "^8.14.2",
+    "tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
