--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -71,6 +71,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/coverage-v8": "^2.1.8",
     "jsdom": "^25.0.1",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
