feat: migrate from Express to NestJS framework
- Update package.json scripts to use Nest CLI commands
- Change main entry point from index.js to main.js
- Add NestJS core dependencies and related packages
- Update environment example with improved JWT configuration
- Update project keywords to reflect NestJS usage

--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -37,7 +37,10 @@
       "@/routes/*": ["routes/*"],
       "@/services/*": ["services/*"],
       "@/utils/*": ["utils/*"],
-      "@/types/*": ["types/*"]
+      "@/types/*": ["types/*"],
+      "@/domain/*": ["domain/*"],
+      "@/application/*": ["application/*"],
+      "@/infrastructure/*": ["infrastructure/*"]
     }
   },
   "include": ["src/**/*"],
