--- a/apps/server/env.example
+++ b/apps/server/env.example
@@ -4,16 +4,16 @@ PORT=3001
 HOST=localhost
 
 # 数据库配置
-DATABASE_URL="postgresql://username:password@localhost:5432/whatschat?schema=public"
+DATABASE_URL="postgresql://whatschat:whatschat123@localhost:5432/whatschat?schema=public"
 
 # Redis配置
 REDIS_URL=redis://localhost:6379
 REDIS_PASSWORD=
 
-# JWT配置
-JWT_SECRET=your-super-secret-jwt-key-here
+# JWT配置（至少32个字符）
+JWT_SECRET=your-super-secret-jwt-key-here-change-in-production-min-32-chars
 JWT_EXPIRES_IN=7d
-JWT_REFRESH_SECRET=your-super-secret-refresh-key-here
+JWT_REFRESH_SECRET=your-super-secret-refresh-key-here-change-in-production-min-32-chars
 JWT_REFRESH_EXPIRES_IN=30d
 
 # 文件存储配置 (AWS S3)
