--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -2,11 +2,12 @@
   "name": "whatschat-server",
   "version": "1.0.0",
   "description": "WhatsChat服务器应用 - 处理消息路由、用户认证、实时通信和业务逻辑",
-  "main": "dist/index.js",
+  "main": "dist/main.js",
   "scripts": {
-    "dev": "nodemon --exec ts-node -r tsconfig-paths/register src/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js",
+    "dev": "nest start --watch",
+    "build": "nest build",
+    "start": "node dist/main.js",
+    "start:prod": "node dist/main.js",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
     "test": "vitest run",
@@ -21,6 +22,23 @@
     "db:push": "prisma db push"
   },
   "dependencies": {
+    "@nestjs/common": "^10.3.0",
+    "@nestjs/core": "^10.3.0",
+    "@nestjs/platform-express": "^10.3.0",
+    "@nestjs/config": "^3.1.1",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/passport": "^10.0.3",
+    "@nestjs/websockets": "^10.3.0",
+    "@nestjs/platform-socket.io": "^10.3.0",
+    "@nestjs/throttler": "^5.0.1",
+    "@nestjs/swagger": "^7.1.17",
+    "@nestjs/terminus": "^10.1.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "class-validator": "^0.14.0",
+    "class-transformer": "^0.5.1",
+    "reflect-metadata": "^0.1.14",
+    "rxjs": "^7.8.1",
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "helmet": "^7.1.0",
@@ -55,6 +73,9 @@
     "tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
+    "@nestjs/cli": "^10.2.1",
+    "@nestjs/schematics": "^10.0.3",
+    "@nestjs/testing": "^10.3.0",
     "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
     "@types/compression": "^1.7.5",
@@ -68,6 +89,7 @@
     "@types/fluent-ffmpeg": "^2.1.24",
     "@types/node-cron": "^3.0.11",
     "@types/ws": "^8.5.10",
+    "@types/passport-jwt": "^4.0.1",
     "typescript": "^5.3.2",
     "ts-node": "^10.9.1",
     "nodemon": "^3.0.2",
@@ -90,7 +112,7 @@
     "realtime",
     "websocket",
     "nodejs",
-    "express",
+    "nestjs",
     "typescript"
   ],
   "author": "felix zhu <z1434866867@gmail.com>",
