refactor: standardize imports and use path aliases for logger
- Update logger imports across multiple files to use `@/shared/utils/logger` path alias
- Replace single quotes with double quotes for consistency in import statements
- Improve code formatting in PrismaService with better line breaks and indentation
- Maintain existing functionality while enhancing code maintainability and readability

--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -30,7 +30,7 @@
     "baseUrl": "./src",
     "paths": {
       "@/*": ["*"],
-      "@/utils/*": ["utils/*"],
+      "@/shared/*": ["shared/*"],
       "@/types/*": ["types/*"],
       "@/domain/*": ["domain/*"],
       "@/application/*": ["application/*"],
