chore: enhance development scripts and update Tailwind configuration
- Adjusted the `dev` and `test:watch` scripts in package.json to include concurrency settings for improved performance.
- Updated Tailwind configuration to include additional source paths for better style application across the project.
- Added window checks in StorageAdapter methods to prevent execution in non-browser environments, enhancing compatibility.

--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
   ],
   "scripts": {
     "build": "turbo run build",
-    "dev": "turbo run dev",
+    "dev": "turbo run dev --concurrency=23",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types",
     "test": "turbo run test",
-    "test:watch": "turbo run test:watch"
+    "test:watch": "turbo run test:watch --concurrency=23"
   },
   "devDependencies": {
     "prettier": "^3.6.0",
