chore: update project configuration and enhance AWS integration
- Added .npmrc to set the npm registry to npmmirror.
- Updated package.json to refine the development script for better filtering and added a setup script for AWS integration.
- Modified pnpm-lock.yaml to include new AWS SDK dependencies and removed outdated packages.
- Enhanced README.md with detailed setup instructions for AWS services, including Chime SDK and API Gateway WebSocket.
- Updated environment configuration in env.example for AWS services.
- Introduced new models in Prisma schema for managing Chime meetings and attendees.
- Refactored WebSocket and WebRTC adapters to support both Socket.IO and API Gateway WebSocket connections.
- Improved Redis service with additional set operations.
- Updated AWS integration package to include new services and configurations.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   ],
   "scripts": {
     "build": "turbo run build",
-    "dev": "turbo run dev --concurrency=23",
+    "dev": "turbo run dev --filter=whatschat-web --filter=whatschat-server --concurrency=23",
+    "setup": "pnpm --filter @whatschat/aws-integration build && cd apps/server && pnpm db:generate && cd ../..",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types",
