--- a/apps/server/env.example
+++ b/apps/server/env.example
@@ -47,6 +47,15 @@ WEBRTC_TURN_SERVERS=turn:your-turn-server.com:3478
 WEBRTC_TURN_USERNAME=your-turn-username
 WEBRTC_TURN_CREDENTIAL=your-turn-credential
 
+# AWS Chime SDK配置
+AWS_CHIME_ENABLED=false
+AWS_CHIME_REGION=us-east-1
+AWS_CHIME_MEDIA_REGION=us-east-1
+
+# AWS API Gateway WebSocket配置
+AWS_API_GATEWAY_WEBSOCKET_ENABLED=false
+AWS_API_GATEWAY_WEBSOCKET_ENDPOINT=https://your-api-id.execute-api.us-east-1.amazonaws.com/production
+
 # 日志配置
 LOG_LEVEL=info
 LOG_FILE_PATH=logs/app.log
