--- a/apps/server/lambda/websocket/tsconfig.json
+++ b/apps/server/lambda/websocket/tsconfig.json
@@ -1,21 +1,17 @@
 {
   "compilerOptions": {
     "target": "ES2020",
+    "module": "commonjs",
     "lib": ["ES2020"],
-    "module": "ESNext",
-    "moduleResolution": "node",
-    "declaration": true,
-    "declarationMap": true,
-    "sourceMap": true,
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": "./",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
-    "isolatedModules": true
+    "moduleResolution": "node"
   },
-  "include": ["src/**/*"],
+  "include": ["*.ts"],
   "exclude": ["node_modules", "dist"]
 }
