--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -48,29 +48,21 @@
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
     "socket.io": "^4.7.4",
-    "socket.io-redis": "^6.1.1",
     "redis": "^4.6.10",
     "prisma": "^5.7.1",
     "@prisma/client": "^5.7.1",
     "multer": "^1.4.5-lts.1",
     "aws-sdk": "^2.1490.0",
     "nodemailer": "^6.9.7",
-    "joi": "^17.11.0",
-    "express-rate-limit": "^7.1.5",
-    "express-validator": "^7.0.1",
     "winston": "^3.11.0",
     "winston-daily-rotate-file": "^4.7.1",
     "uuid": "^9.0.1",
     "moment": "^2.29.4",
     "sharp": "^0.32.6",
-    "fluent-ffmpeg": "^2.1.2",
-    "elasticsearch": "^16.7.3",
-    "bull": "^4.12.0",
     "ioredis": "^5.3.2",
-    "node-cron": "^3.0.3",
-    "express-ws": "^5.0.2",
     "ws": "^8.14.2",
-    "tsconfig-paths": "^4.2.0"
+    "tsconfig-paths": "^4.2.0",
+    "@whatschat/aws-integration": "workspace:*"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.2.1",
@@ -86,8 +78,6 @@
     "@types/nodemailer": "^6.4.14",
     "@types/uuid": "^9.0.7",
     "@types/node": "^20.10.0",
-    "@types/fluent-ffmpeg": "^2.1.24",
-    "@types/node-cron": "^3.0.11",
     "@types/ws": "^8.5.10",
     "@types/passport-jwt": "^4.0.1",
     "typescript": "^5.3.2",
