--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -61,7 +61,8 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
     "zod": "^3.24.1",
-    "zustand": "^5.0.6"
+    "zustand": "^5.0.6",
+    "amazon-chime-sdk-js": "^3.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
